--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ p {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  padding-right: 35px;
 }
 
 .float-navigation .container .logo {
@@ -158,16 +159,7 @@ p {
   color: #e8d2b8;
 }
 
-.meniu .lang a {
-  vertical-align: -2px;
-}
-
-.meniu .icon-search1 {
-  color: #fff;
-  vertical-align: -1px;
-}
-
-.icon_burger i {
+.meniu a.icon_burger {
   display: none;
 }
 
@@ -850,37 +842,29 @@ select:focus, input:focus, textarea:focus {
 }
 
 /* CONTACT US FORM: END */
-@media screen and (max-width: 600px) {
-  .topnav a {
+@media screen and (max-width: 800px) {
+  .float-navigation .meniu {
+    position: relative;
+    display: block;
+  }
+  .float-navigation .meniu a.icon_burger {
+    display: block;
+  }
+  .topnav {
     display: none;
   }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
   .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
     position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
     display: block;
-    text-align: left;
+    width: 150px;
+    right: 0;
+    background-color: #2a2d2c;
+    text-align: right;
+    padding-bottom: 15px;
   }
 }
 
 @media all and (max-width: 600px) {
-  .special-container {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
   .first .content {
     padding-left: 20px;
     max-width: 280px;
@@ -971,5 +955,11 @@ select:focus, input:focus, textarea:focus {
 @media all and (max-width: 600px) {
   .news .container {
     padding: 50px 20px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .reservation .container {
+    margin: 0 20px 0px 20px;
   }
 }
