--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,16 +62,13 @@ body {
 
 ul {
   list-style: none;
-  /* kad nebutu bullet pointu */
   margin: 0;
   padding: 0;
 }
 
 img {
   width: 100%;
-  /* padaro, kad prisitaikytu prie tevynainio */
   display: block;
-  /* kad nebutu tarpelio po nuotrauka */
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -81,6 +78,8 @@ h1, h2, h3, h4, h5, h6, p {
 a {
   text-decoration: none;
   text-transform: uppercase;
+  color: #fff;
+  font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
 }
 
 p {
@@ -165,96 +164,6 @@ p {
 
 /* 1 SECTION END: NAVIGATION MENIU */
 /* 2 SECTION START: CAROUSEL */
-/*https://owlcarousel2.github.io/OwlCarousel2/docs/started-installation.html*/
-.carousel {
-  background-color: #2a2d2c;
-}
-
-.owl-carousel .owl-stage-outer {
-  -webkit-transform: translateY(107px);
-  -ms-transform: translateY(107px);
-  transform: translateY(107px);
-}
-
-/* nuotrauka kazkodel per maza???? */
-.carousel .photo {
-  background-size: cover;
-  background-position: center;
-}
-
-.photo.first {
-  background-image: url("../images/big_towel-compressor.jpg");
-}
-
-.photo.second {
-  background-image: url("../images/big_mask-compressor.jpg");
-}
-
-.special-container {
-  max-width: 1186px;
-  margin: 0 auto;
-  margin-left: 39.547px;
-  margin-right: 39.547px;
-  min-height: 100vh;
-  /* kaip sitas sprendimas? 612px; 715px, 100vh*/
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.special-container.second {
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-}
-
-.first .content {
-  padding-left: 73px;
-  max-width: 623px;
-}
-
-.second .content {
-  padding-left: 20px;
-  max-width: 623px;
-}
-
-.carousel h3 {
-  color: #c0b7af;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
-  letter-spacing: 3px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 26px;
-}
-
-.second h3 {
-  color: #c0b7af;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
-  letter-spacing: 3px;
-  font-style: normal;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.carousel h4 {
-  color: #2d2a27;
-  font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.9rem;
-  letter-spacing: 1px;
-  padding-top: 25px;
-  padding-bottom: 45px;
-}
-
-.second h4 {
-  color: white;
-}
-
 .button {
   padding: 16px 42px;
   /* tipo 11 ir 42*/
@@ -269,12 +178,105 @@ p {
   letter-spacing: 4px;
 }
 
-.first a:hover {
+.carousel {
+  background-color: #2a2d2c;
+}
+
+.carousel .owl-carousel .owl-stage-outer {
+  -webkit-transform: translateY(107px);
+  -ms-transform: translateY(107px);
+  transform: translateY(107px);
+}
+
+.carousel .owl-carousel .owl-stage-outer .special-container {
+  max-width: 1186px;
+  margin: 0 auto;
+  margin-left: 39.547px;
+  margin-right: 39.547px;
+  min-height: 100vh;
+  /* kaip sitas sprendimas? 612px; 715px, 100vh*/
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.photo {
+  background-size: cover;
+  background-position: center;
+}
+
+.photo.first {
+  background-image: url("../images/big_towel-compressor.jpg");
+}
+
+.photo.first .content {
+  padding-left: 73px;
+  max-width: 623px;
+}
+
+.photo.first .content h3 {
+  color: #c0b7af;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
+  letter-spacing: 3px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.photo.first .content h4 {
+  color: #2d2a27;
+  font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.9rem;
+  letter-spacing: 1px;
+  padding-top: 25px;
+  padding-bottom: 45px;
+}
+
+.photo.first .content a:hover {
   background: #b8a48d;
   color: #f7f4f0;
 }
 
-.second a:hover {
+.photo.second {
+  background-image: url("../images/big_mask-compressor.jpg");
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.photo.second .content {
+  padding-left: 20px;
+  max-width: 623px;
+}
+
+.photo.second .content h3 {
+  color: #c0b7af;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
+  letter-spacing: 3px;
+  font-style: normal;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.photo.second .content h4 {
+  color: #2d2a27;
+  font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.9rem;
+  letter-spacing: 1px;
+  padding-top: 25px;
+  padding-bottom: 45px;
+  color: white;
+}
+
+.photo.second .content a:hover {
   background: #fff;
   color: black;
 }
@@ -847,6 +849,9 @@ select:focus, input:focus, textarea:focus {
     position: relative;
     display: block;
   }
+  .float-navigation .meniu a {
+    font-size: 1rem;
+  }
   .float-navigation .meniu a.icon_burger {
     display: block;
   }
@@ -861,33 +866,37 @@ select:focus, input:focus, textarea:focus {
     background-color: #2a2d2c;
     text-align: right;
     padding-bottom: 15px;
+    line-height: 30px;
   }
 }
 
 @media all and (max-width: 600px) {
-  .first .content {
+  .photo.first .content, .photo.second .content {
     padding-left: 20px;
     max-width: 280px;
   }
-  .second .content {
-    padding-left: 20px;
-    max-width: 300px;
-  }
-  .second .content a {
-    max-width: 30%;
-  }
-  .carousel h3 {
+  .photo.first .content h3, .photo.second .content h3 {
     font-size: 1rem;
   }
-  .carousel h4 {
+  .photo.first .content h4, .photo.second .content h4 {
     font-size: 1.5rem;
+  }
+  .photo.first .content .button, .photo.second .content .button {
+    padding: 10px 28px;
+    letter-spacing: 2px;
+  }
+  .photo.second .content {
+    max-width: 270px;
+  }
+  .photo.second .content .button {
+    max-width: 30%;
   }
 }
 
 @media all and (max-width: 600px) {
   .content-about-us {
-    margin-top: 90px;
-    margin-bottom: 110px;
+    margin-top: 170px;
+    margin-bottom: 170px;
   }
 }
 
@@ -899,7 +908,7 @@ select:focus, input:focus, textarea:focus {
 
 @media screen and (max-width: 750px) {
   .intro-to-service .container {
-    padding-top: 60px;
+    padding-top: 100px;
     padding-bottom: 70px;
     display: block;
     margin: 0 20px 0px 20px;
@@ -935,8 +944,8 @@ select:focus, input:focus, textarea:focus {
 
 @media all and (max-width: 1000px) {
   .voucher .container {
-    padding-top: 230px;
-    padding-bottom: 230px;
+    padding-top: 260px;
+    padding-bottom: 250px;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
@@ -954,7 +963,7 @@ select:focus, input:focus, textarea:focus {
 
 @media all and (max-width: 600px) {
   .news .container {
-    padding: 50px 20px;
+    padding: 100px 20px;
   }
 }
 
