--- a/assets/scss/_carousel.scss
+++ b/assets/scss/_carousel.scss
@@ -1,50 +1,4 @@
 /* 2 SECTION START: CAROUSEL */
-/*https://owlcarousel2.github.io/OwlCarousel2/docs/started-installation.html*/
-
-.carousel {
-  background-color: $baseColor;
-}
-
-.owl-carousel .owl-stage-outer {
-  transform: translateY(107px);
-}
-
-/* nuotrauka kazkodel per maza???? */
-.carousel .photo {
-  background-size: cover;
-  background-position: center;
-}
-
-.photo.first {
-  background-image: url("../images/big_towel-compressor.jpg");
-}
-
-.photo.second {
-  background-image: url("../images/big_mask-compressor.jpg");
-}
-
-.special-container {
-  max-width: 1186px;
-  margin: 0 auto;
-  margin-left: 39.547px;
-  margin-right: 39.547px;
-  min-height: 100vh; /* kaip sitas sprendimas? 612px; 715px, 100vh*/
-  align-items: center;
-}
-
-.special-container.second{
-  justify-content: flex-end;
-}
-
-.first .content {
-  padding-left: 73px;
-  max-width: 623px;
-}
-
-.second .content {
-  padding-left: 20px;
-  max-width: 623px;
-}
 
 @mixin uppercase-title {
   color: rgb(192, 183, 175);
@@ -57,16 +11,6 @@
 
 }
 
-.carousel h3 {
-  @include uppercase-title;
-  line-height: 26px;
-}
-
-.second h3 {
-  @include uppercase-title;
-  color: rgba(255, 255, 255, 0.6);
-} 
-
 @mixin big-title {
   color: rgb(45, 42, 39);
   font-family: $marcellus;
@@ -74,16 +18,11 @@
   font-weight: 400;
 }
 
-.carousel h4 {
-  @include big-title;
+@mixin h4-spaces {
   font-size: 1.9rem;
   letter-spacing: 1px;
   padding-top: 25px;
   padding-bottom: 45px;
-}
-
-.second h4 {
-  color: rgb(255, 255, 255);
 }
 
 .button {
@@ -99,19 +38,77 @@
   letter-spacing: 4px;
 }
 
+.carousel {
+  background-color: $baseColor;
 
-.first a:hover {
-  background: #b8a48d;
-  color: #f7f4f0;
+  .owl-carousel .owl-stage-outer {
+    transform: translateY(107px);
+
+    .special-container {
+      max-width: 1186px;
+      margin: 0 auto;
+      margin-left: 39.547px;
+      margin-right: 39.547px;
+      min-height: 100vh; /* kaip sitas sprendimas? 612px; 715px, 100vh*/
+      align-items: center;
+    }
+  }
 }
 
-// .atitraukimas {
-//   margin-bottom: 60px;
-// }
 
-.second a:hover {
-  background: #fff;
-  color: black;
+.photo {
+  background-size: cover;
+  background-position: center;
+
+  &.first {
+    background-image: url("../images/big_towel-compressor.jpg");
+
+    .content {
+      padding-left: 73px;
+      max-width: 623px;
+
+      h3 {
+        @include uppercase-title;
+        line-height: 26px;
+      }
+
+      h4 {
+        @include big-title;
+        @include h4-spaces;
+      }
+
+      a:hover {
+        background: #b8a48d;
+        color: #f7f4f0;
+      }
+    }
+  }
+
+  &.second {
+    background-image: url("../images/big_mask-compressor.jpg");
+    justify-content: flex-end;
+
+    .content {
+      padding-left: 20px;
+      max-width: 623px;
+
+      h3 {
+        @include uppercase-title;
+        color: rgba(255, 255, 255, 0.6);
+      }
+
+      h4 {
+        @include big-title;
+        @include h4-spaces;        
+        color: rgb(255, 255, 255);
+      }
+
+      a:hover {
+        background: #fff;
+        color: black;
+      }
+    }
+  }
 }
 
 /* 2 SECTION END: CAROUSEL */
